# Poetry-specific settings.
[project]
name = "python-template-repo"
version = "0.1.0"
description = "Python Template Repository"
requires-python = ">=3.13, <3.14"
readme = "README.md"
authors = []

dependencies = [
    "pydantic~=2.12.5",
    "python-dateutil>=2.9.0,<3",
    "pytest-dotenv~=0.5.2",
]

# Development dependencies of the project.
[dependency-groups]
test = [
    "pytest~=9.0.2",
    "pytest-mock~=3.15.1",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.1.0",
]

lint = [
    "ruff~=0.15.7",
    "ty~=0.0.25",
]

notebook = [
    "ipython~=9.11.0",
    "ipykernel~=7.2.0",
    "marimo~=0.21.1",
    "nbstripout~=0.9.1",
]

build = [
    "setuptools~=82.0.1",
    "prek~=0.3.8",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff section configures the Ruff linter and formatter.
[tool.ruff.lint]
select = ["E", "W", "F", "I", "TID"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
typeCheckingMode = "basic"
